# OpenAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_FIXES_SUMMARY.md  CONTRIBUTING.md  DEMO.md  Dockerfile  INSTALL.md  Makefile  PLUGINS_SUMMARY.md  README.md  README_updated.md  RELEASE_NOTES_0.1.2.md  RELEASE_NOTES_0.1.3.md  REMOTE_COMPARISON.md  RESTRUCTURE_COMPLETE.md  ROADMAP.md  ROADMAP_PROGRESS.md  SECURITY.md  STRUCTURE_PLAN.md  WARP.md  WARP_COMPARISON.md  debug_import.py  demo.py  docker-compose.yml  install_and_run.sh  mkdocs.yml  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_import_simple.py  test_minimal.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  fast-ci.yml  format-code.yml  labels.yml  nightly.yml
docs/: API_STABILITY.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  HARDENING.md  Makefile  README.md  SYSTEM_DESIGN.md  TUTORIAL.md  WARP_PARITY_PLAN.md  api-migration.md  api.md  architecture.md  conf.py  configuration.md  index.rst  installation.md  quickstart.md  quickstart_server_ws.md
docs/adr/: ADR-001-agent-tool-pattern.md  README.md
docs/api/: core.rst  llm.rst
docs/source/: conf.py  index.rst
docs/source/api/: core.rst
docs/source/development/: plugins.rst
enhancements/: code_intelligence.md  command_intelligence.md  context_enhancement.md  knowledge_base.md  performance.md  terminal_ux.md
examples/: chatbot_example.py  ws_client.js  ws_client.py
examples/plugins/lua/: README.md  __init__.py  plugin.yaml
examples/plugins/wasm/: README.md  __init__.py  plugin.yaml
examples/plugins/weather/: __init__.py
openagent/: __init__.py  cli.py
openagent/core/: __init__.py  agent.py  base.py  code_generator.py  code_intelligence.py  command_intelligence.py  command_templates.py  config.py  context.py  context_engine.py  debugging_assistant.py  enhanced_context.py  exceptions.py  fallback.py  history.py  intelligent_agent.py  llm.py  llm_gemini.py  llm_ollama.py  memory_learning.py  observability.py  performance_config.py  performance_integration.py  policy.py  redact.py  router.py  smart_prompts.py  tool_contracts.py  tool_selector.py  workflows.py
openagent/core/context_v2/: __init__.py  environment_detector.py  history_intelligence.py  project_analyzer.py
openagent/core/performance/: __init__.py  memory_manager.py  model_cache.py  optimization.py  resource_monitor.py  work_queue.py
openagent/plugins/: __init__.py  base.py  loader.py  manager.py  marketplace.py  registry.py  validator.py
openagent/plugins/builtin/: __init__.py  echo.py  time.py
openagent/server/: app.py  app_new.py  auth.py  models.py  openapi_enhancement.py  rate_limiter.py  versioning.py
openagent/terminal/: __init__.py  integration.py  validator.py
openagent/tools/: __init__.py  git.py  github.py  patch.py  system.py
openagent/ui/: __init__.py  blocks.py  formatting.py  renderer.py
openagent/utils/: subprocess_utils.py
openagent/websocket/: __init__.py  handler.py  manager.py  middleware.py  models.py
openagent_backup/: cli.py
openagent_backup/core/: __init__.py  agent.py  base.py  command_templates.py  config.py  context_engine.py  enhanced_context.py  llm.py  llm_base.py  llm_ollama.py  observability.py  performance_config.py  performance_integration.py  policy.py  router.py  tool_selector.py
openagent_backup/core/performance/: __init__.py  model_cache.py  optimization.py  resource_monitor.py  work_queue.py
openagent_backup/llms/: __init__.py  base.py  ollama.py
openagent_backup/plugins/: __init__.py  base.py  manager.py
openagent_backup/policy/: engine.py
openagent_backup/server/: app.py  openapi_enhancement.py
openagent_backup/terminal/: integration.py
openagent_backup/tools/: __init__.py  base.py  git.py  router.py  system.py
openagent_backup/ui/: __init__.py  formatting.py  renderer.py
openagent_backup/websocket/: __init__.py  models.py
plugins/: config.json  echo.py  tool_provider.py
scripts/: build_binary.sh  dev.sh  export_openapi.sh  install.sh  install_openagent.sh  install_precommit.sh  validate_ci.py
tests/: conftest.py  test_chat_streaming.py  test_cli_plan_only.py  test_cli_plan_only_extended.py  test_command_executor.py  test_file_policy.py  test_integration.py  test_observability.py  test_performance.py  test_performance_benchmarks.py  test_policy_engine.py  test_server_startup.py  test_subprocess_utils.py  test_tool_contracts.py  test_tool_router.py  test_tool_selector_heuristics.py  test_tools_system.py
tests/cli/: test_chat_loop_streaming.py  test_cli_helpers.py  test_cli_plugin_tools.py  test_streaming_cli.py
tests/core/: test_agent_ollama.py  test_llm_ollama.py  test_llms.py
tests/fixtures/: test_data.py
tests/integration/: test_cli_integration.py
tests/server/: test_health_monitoring.py  test_metrics_and_healthz.py  test_streaming_incremental.py  test_workqueue_overload.py  test_ws_chat.py
tests/ui/: test_block_renderer_formatting.py  test_formatter_languages_and_logs.py  test_formatting_enhancements.py
tests/unit/: test_core_agent.py  test_core_llm.py  test_plugin_manager_ext.py  test_plugin_system.py
